<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Gym Viet Care</string>
    <string name="capture_name">QR Code Capture</string>
    <string name="encoder_name">QR Code Encoder</string>
    <string name="decoder_name">QR Code Decoder</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_welcome">Gym Viet for Vietnamese Healthy</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_please_login">Please Signup or Login to view your profile</string>
    <string name="msg_add_involve_successful">Add customer successfully</string>
    <string name="msg_add_involve_failed">Fail to add customer</string>
    <string name="msg_add_involve_already">Already add this customer</string>
    <string name="msg_remove_involve_successful">Remove customer successfully</string>
    <string name="msg_remove_involve_failed">Fail to remove customer</string>
    <string name="msg_remove_involve_already">Already removed this customer</string>
    <string name="msg_add_point_successful">Add customer point successfully</string>
    <string name="msg_point_history_failed">Error, please try again</string>
    <string name="msg_customer_list_fail">Error, please try again</string>
    <string name="msg_login_incorrect">Wrong email or password. Try again</string>
    <string name="msg_login_error">Some error when login</string>
    <string name="msg_register_existed">Email has existed</string>
    <string name="msg_register_error">Some error when register</string>
    <string name="msg_register_wrong_email">Your email is invalid</string>
    <string name="msg_register_not_address">Email must be correct</string>
    <string name="msg_register_name_invalid">Enter your name</string>
    <string name="msg_register_password_not_match">Password not match</string>
    <string name="msg_register_password_invalid">Password too short</string>
    <string name="msg_no_network_common">Please turn on network connection to use app function</string>
    <string name="msg_no_network_function">Please turn on network to use this function</string>
    <string name="msg_err_request_login">Please re-login to do this action</string>
    <string name="msg_err_not_found">Your request not found in our server</string>
    <string name="msg_err_error">Error when request</string>
    <string name="msg_err_need_involved_customer">This customer not involved yet</string>
    <string name="msg_err_need_involved_shop">This shop not involved yet</string>
    <string name="msg_checkin_valid">Membership is valid</string>
    <string name="msg_checkin_outdate">Membership outdated</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="wifi_changing_network">Changing Network</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_generate">Generate</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_add_point">Done</string>
    <string name="txt_add_invol">Add Customer</string>
    <string name="txt_remove_invol">Remove Customer</string>
    <string name="txt_add_point_type">Type: sell product</string>
    <string name="txt_add_point_detail">Detail</string>
    <string name="txt_add_point">Point</string>
    <string name="txt_add_point_detail_hint">Detail about your point</string>
    <string name="login_login">LOGIN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register_me">I don\'t have account. Register Me!</string>
    <string name="btn_register">Register</string>
    <string name="btn_log_me_in">Already registered. Login Me!</string>
    <string name="btn_add_point">Add point for customer</string>
    <string name="btn_scan_product">Scan the product</string>
    <string name="btn_to_add_point">+ Points</string>
    <string name="btn_add_membership">Add membership</string>
    <string name="btn_renew_membership">Renew</string>
    <string name="btn_checkin">Checkin</string>
    <string name="reg_register">Register</string>
    <string name="reg_full_name">Full Name</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Confirm password</string>
    <!-- <string name="url_base">http://192.168.202.1:80/</string> -->
<!--     <string name="url_base">http://192.168.11.9:80/</string> -->
    <string name="url_base">http://10.0.2.2:80/</string>
    <string name="url_login">customer-app/login</string>
    <string name="url_register">customer-app/register</string>
    <string name="url_get_customer_infor">customer-app/getuserinfo</string>
    <string name="url_add_my_customer">customer-app/addmycustomer</string>
    <string name="url_add_customer_point">customer-app/addcustomerpoint</string>
    <string name="url_get_customer_history">customer-app/getcustomerhistory</string>
    <string name="url_get_shop_info">customer-app/getshopinfo</string>
    <string name="url_get_point_history">customer-app/getpointhistory</string>
    <string name="url_get_involvement_customer">customer-app/getcustomerinvolve</string>
    <string name="url_get_involvement_shop">customer-app/getshopinvolve</string>
    <string name="url_get_shop_customer_points">customer-app/getshopcustomerpoints</string>
    <string name="shop_tool_contact">Contact</string>
    <string name="shop_tool_report">Report</string>
    <string name="shop_tool_product">Product</string>
    <string name="shop_tool_sale_order">Sale Order</string>
    <string name="shop_tool_purchase_order">Purchase Order</string>
    <string name="shop_tool_financial">Finance</string>
    <string name="title_activity_main">GymViet Care</string>
    <string name="title_activity_login">Log me in</string>
    <string name="title_activity_register">Register me</string>
    <string name="title_activity_shop_info">ShopInfoActivity</string>
    <string name="title_activity_customer_info">CustomerInfoActivity</string>
    <string name="title_activity_add_customer_point">AddCustomerPointActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_point_history">PointHistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_customer_list">CustomerListActivity</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="title_customer_section1">Home</string>
    <string name="title_customer_section2">News</string>
    <string name="title_customer_section3">History</string>
    <string name="title_shop_section1">Home</string>
    <string name="title_shop_section2">Customer</string>
    <string name="title_shop_section3">Tools</string>
    <string name="title_activity_shop_main">ShopMainActivity</string>
    <string name="title_activity_gymclub_main">GymclubMainActivity</string>
    <string name="title_gym_section1">Checkin</string>
    <string name="title_gym_section2">Customer</string>
    <string name="title_gym_section3">Tools</string>
    <string name="title_activity_scan_for_result">ScanForResultActivity</string>
    <string name="title_activity_shop_customer_points">ShopCustomerPointsActivity</string>

</resources>