<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        android:icon="@drawable/ic_action_scan"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_generate"
        android:orderInCategory="100"
        android:title="@string/menu_generate"
        android:showAsAction="never"/>
    <item
        android:id="@+id/menu_login"
        android:orderInCategory="100"
        android:title="@string/menu_login"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="100"
        android:title="@string/menu_feedback"
        android:showAsAction="never"/>

</menu>
