<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_web" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/msg_welcome"
        android:gravity="center_horizontal"
        android:textColor="#FF8800"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Link to Login Screen -->

    <!-- Link to Registration Screen -->

    

    

<!--     <Button -->
<!--         android:id="@+id/btnTest" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignParentLeft="true" -->
<!--         android:layout_alignParentTop="true" -->
<!--         android:text="Test" /> -->

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="64dp"
        android:background="@null"
        android:text="@string/btn_log_me_in"
        android:textColor="#0099CC"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btnMainRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:layout_below="@+id/btnMainLogin"
        android:text="@string/btn_register_me"
        android:textColor="#0099CC"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btnMainRegisterShop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:layout_below="@+id/btnMainRegister"
        android:text="@string/btn_register_shop"
        android:textColor="#0099CC"
        android:textStyle="bold" />

</RelativeLayout>